--- a/resume.html
+++ b/resume.html
@@ -50,7 +50,7 @@
                 <button id="open"> Open </button>
                 <button id="save"> Save </button>
                 <button id="export"> Export </button>
-                <button id="console"> Print Delta </button>
+                <!-- <button id="console"> Print Delta </button> -->
                 <button id="loadModules"> Load Modules </button>
 
                 <!-- <button id="quillTest"> Quill Test </button> -->
